css/styles.css
/* ... */
.navbar-custom .navbar-brand {
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: 0.1rem;
  font-weight: 700;
}
.navbar-custom .navbar-nav .nav-item .nav-link {
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

section.masthead {
  /* position: relative; */
  height: 100vh;
  overflow: hidden;
  padding-top: calc(7rem + 72px);
  padding-bottom: 7rem;
  /* background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%); */
  background-image: url("../assets/img/IMG_2370.png");
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: scroll;
  background-size: cover;
}
section.masthead .masthead-content {
  z-index: 1;
  position: relative;
}
section.masthead .masthead-content .masthead-heading {
  font-size: 6rem;
  text-shadow: 
  -1px -1px 2px #000,
   0px -1px 2px #000,
   1px -1px 2px #000,
  -1px  0px 2px #000,
   1px  0px 2px #000,
  -1px  1px 2px #000,
   0px  1px 2px #000,
   1px  1px 2px #000;
}
section.masthead .masthead-content .masthead-subheading {
  font-size: 2rem;
}

@media (min-width: 992px) {
  header.masthead {
    padding-top: calc(10rem + 55px);
    padding-bottom: 10rem;
  }
  header.masthead .masthead-content .masthead-heading {
    font-size: 6rem;
  }
  header.masthead .masthead-content .masthead-subheading {
    font-size: 4rem;
  }
}


html,body{width: 100vw; }

.section{
  height: 100vh;
}

@media (max-width: 600px)
{
    .container
    {
      padding-right: calc(var(--bs-gutter-x) * 0.2) !important;
      padding-left: calc(var(--bs-gutter-x) * 0.2) !important;
    }

    .image {
      display: none;
      max-width: 500px;
    }
}

.header {
    /* position: relative; */
    height: 100vh;
    /* overflow: hidden; */
    padding-top: calc(7rem + 72px);
    padding-bottom: 7rem;
    /* background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%); */
    background-image: url("../assets/img/IMG_2370.png");
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: scroll;
    background-size: cover;
}

.scroll_wrapper {
  height: 100vh;
  height: 100dvh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
}

.scroll_point  {
  scroll-snap-align: start;
} 

.content {
  display: flex;
  align-items: center;

}

.list li{
  margin: 10px 0;
}

/* .content .container {
  display:table-cell;
  vertical-align:middle;
} */

/* @media (min-width: 576px) {
  .container-sm, .container {
    max-width: 540px;
  }
}
@media (min-width: 768px) {
  .container-md, .container-sm, .container {
    max-width: 720px;
  }
}
@media (min-width: 992px) {
  .container-lg, .container-md, .container-sm, .container {
    max-width: 960px;
  }
}
@media (min-width: 1200px) {
  .container-xl, .container-lg, .container-md, .container-sm, .container {
    max-width: 1140px;
  }
}
@media (min-width: 1400px) {
  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
    max-width: 1320px;
  }
} */

